# smart-mobility-automation

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  requirements.txt  test_hsv.py
scripts/: test_color_follow.sh  test_maintenance.sh
src/turtlebot3_automation/: README.md  package.xml  setup.cfg  setup.py
src/turtlebot3_automation/config/: color_follow.yaml
src/turtlebot3_automation/launch/: automation_bringup.launch.py  color_follow.launch.py
src/turtlebot3_automation/turtlebot3_automation/: __init__.py  cli.py
src/turtlebot3_automation/turtlebot3_automation/custom_features/: color_follow_node.py
src/turtlebot3_automation/turtlebot3_automation/maintenance/: __init__.py  monitor_node.py
src/turtlebot3_automation/turtlebot3_automation/perception/: __init__.py
src/turtlebot3_automation/turtlebot3_automation/setup_automation/: __init__.py  installer.py
src/turtlebot3_automation/turtlebot3_automation/utils/: __init__.py  logging.py  paths.py
