<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_automation</name>
  <version>0.1.0</version>
  <description>Automation toolkit for TurtleBot3 covering setup, maintenance, navigation, object detection, and custom behaviors.</description>

  <maintainer email="example@example.com">Baratov Sokhibjon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
